--- a/.github/workflows/debug-build.yml
+++ b/.github/workflows/debug-build.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     steps:
       - name: Clone the repository
         uses: actions/checkout@v4
