--- a/config.toml
+++ b/config.toml
@@ -6,3 +6,6 @@ groups = ["wheel"]
 [[customizations.filesystem]]
 mountpoint = "/boot"
 size = 209715200
+
+[customizations.kernel]
+append = "root=PARTLABEL=userdata"
