[u] use updated arm 7z version

--- a/.github/workflows/debug-build.yml
+++ b/.github/workflows/debug-build.yml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Post-process images
         run: |
-          sudo apt -y install 7zip
-
+          curl -L https://7-zip.org/a/7z2501-linux-arm64.tar.xz | tar -xJf -
+          sudo cp 7zzs /bin/7z
           mkdir artifacts
 
           # boot and esp images are unchanged
