--- a/.github/workflows/debug-build.yml
+++ b/.github/workflows/debug-build.yml
@@ -6,11 +6,8 @@ jobs:
   build:
     runs-on: ubuntu-24.04-arm
     steps:
-      - name: Clone the repository
-        uses: actions/checkout@v4
-
-      - name: Build the images
-        uses: pocketblue/actions/partition-images@main
+      - uses: actions/checkout@v4
+      - uses: pocketblue/actions/partition-images@main
         with:
           config_file: ./config.toml
           esp_size: 268435456
@@ -18,31 +15,22 @@ jobs:
           registry: ${{ vars.REGISTRY }}
           image_name: oneplus6-gnome-mobile
           image_tag: 42
-
-      - name: Post-process images
+      - name: build common
         run: |
           curl -L https://7-zip.org/a/7z2501-linux-arm64.tar.xz | tar -xJf -
           sudo cp 7zzs /bin/7z
-          mkdir artifacts
-
-          # boot and esp images are unchanged
-          cp images/boot.raw artifacts/boot.raw
-          cp images/esp.raw artifacts/esp.raw
-          cp images/root.raw artifacts/root.raw
-
-          # pack rootfs into an archive
-          # mkdir root
-          # sudo mount -o ro,loop images/root.raw root
-          # sudo tar -C root -cpf root.tar .
-          # sudo chmod 666 root.tar
-
-          # compress rootfs
-          # 7z a -txz -mx=9 artifacts/root.tar.xz root.tar
-
-          7z a -mx9 dualboot.7z artifacts/boot.raw artifacts/esp.raw artifacts/root.raw
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+          bash common_build.sh
+      - name: build oneplus6
+        run: |
+          env --chdir=oneplus6 bash build.sh
+      - name: build oneplus6t
+        run: |
+          env --chdir=oneplus6t bash build.sh
+      - uses: actions/upload-artifact@v4
         with:
-          name: 'dualboot'
-          path: 'dualboot.7z'
+          name: dualboot_oneplus6
+          path: oneplus6/dualboot_oneplus6.7z
+      - uses: actions/upload-artifact@v4
+        with:
+          name: dualboot_oneplus6t
+          path: oneplus6t/dualboot_oneplus6t.7z
