--- a/.github/workflows/oneplus6_fedora_lineage.yml
+++ b/.github/workflows/oneplus6_fedora_lineage.yml
@@ -15,10 +15,14 @@ jobs:
           registry: ${{ vars.REGISTRY }}
           image_name: oneplus6-gnome-mobile
           image_tag: 42
-      - name: oneplus6 common
+      - name: dependencies
         run: |
+          curl -L https://github.com/ssut/payload-dumper-go/releases/download/1.3.0/payload-dumper-go_1.3.0_linux_arm64.tar.gz | tar -xzf -
           curl -L https://7-zip.org/a/7z2501-linux-arm64.tar.xz | tar -xJf -
           sudo cp 7zzs /bin/7z
+          sudo cp payload-dumper-go /bin/payload-dumper-go
+      - name: oneplus6 common
+        run: |
           bash common/build.sh
       - name: oneplus6 enchilada
         env:
